--- a/day3/part-two-comment-app/src/app/comments/comments.component.html
+++ b/day3/part-two-comment-app/src/app/comments/comments.component.html
@@ -10,7 +10,7 @@
     </ul>
 </div>
 </div>
-<table class="commenttable">
+<!-- <table class="commenttable">
     <tr>
         <th>PostId</th>
         <th>Id</th>
@@ -25,4 +25,4 @@
         <td>{{i.email}}</td>
         <td>{{i.body}}</td>
     </tr>
-</table>
+</table> -->
