--- a/day4/todo-app/src/app/todo/todo.component.html
+++ b/day4/todo-app/src/app/todo/todo.component.html
@@ -1,1 +1,15 @@
-<p>todo works!</p>
+<p>My Todos :</p>
+<table class="todotable">
+    <tr>
+        <th>User Id</th>
+        <th>Id</th>
+        <th>Title</th>
+        <th>Completed status</th>
+    </tr>
+    <tr *ngFor="let todo of todolist">
+        <td>{{todo.userId}}</td>
+        <td>{{todo.id}}</td>
+        <td>{{todo.title}}</td>
+        <td [textContent]="(todo.completed)? 'Completed' : 'Pending'"></td>
+    </tr>
+</table>
