day 5 assignment done

--- a/day5/todo-search-app/src/app/todo/todo.component.html
+++ b/day5/todo-search-app/src/app/todo/todo.component.html
@@ -1,5 +1,6 @@
 <p>My Todos :</p>
-<app-search></app-search>
+<app-search [dataToBeFiltered]="backuplist" (evtemitter)="updateData($event)"></app-search>
+<!-- " -->
 <table class="todotable">
     <tr>
         <th>User Id</th>
