--- a/day5/todo-search-app/src/app/search/search.component.html
+++ b/day5/todo-search-app/src/app/search/search.component.html
@@ -1,11 +1,23 @@
-<h1>Search todos</h1>
 
-Parameters : 
-<input type="radio" id="userid" name="userid" value="userid">
-<label for="userid">UserId :</label>
-<input type="radio" id="id" name="id" value="id">
-<label for="id">Id :</label>
-<input type="radio" id="title" name="title" value="title">
-<label for="title">Title :</label>
-<input type="radio" id="completed" name="completed" value="completed">
-<label for="other">Completed Status :</label>
+<div class="form-container">
+Search Parameters :
+<form>
+
+<input type="radio" [formControl]="parameter" name="parameter" id="userid" value="userid">
+<label for="userid">UserId </label>
+
+<input type="radio" [formControl]="parameter" name="parameter" id="id" value="id">
+<label for="id">Id </label>
+
+<input type="radio" [formControl]="parameter" name="parameter" value="title">
+<label for="title">Title </label>
+
+<input type="radio" [formControl]="parameter" name="parameter" value="completed">
+<label for="other">Completed Status</label>
+
+<br>
+
+<input type="text" placeholder="search..." id="search" [formControl]="searchField">
+<br><br>
+</form>
+</div>
