--- a/day5/todo-search-app/src/app/todo/todo.component.html
+++ b/day5/todo-search-app/src/app/todo/todo.component.html
@@ -12,6 +12,6 @@
         <td>{{todo.userId}}</td>
         <td>{{todo.id}}</td>
         <td>{{todo.title}}</td>
-        <td [textContent]="(todo.completed)? 'Completed' : 'Pending'"></td>
+        <td>{{todo.completed}}</td>
     </tr>
 </table>
