--- a/day7/bank-app/src/app/bill-pay-and-recharge/bill-pay-and-recharge.component.html
+++ b/day7/bank-app/src/app/bill-pay-and-recharge/bill-pay-and-recharge.component.html
@@ -1,3 +1,6 @@
+<h4>In this new BillPay, you can now make online payments to over 260 billers across various categories including:</h4>
 <ul>
     <li *ngFor="let item of billpayandrechargedata">{{item}}</li>
 </ul>
+
+Add billers and pay your bills through the enhanced BillPay service, powered by BillDesk.
