--- a/day7/bank-app/src/app/bill-pay-and-recharge/bill-pay-and-recharge.component.html
+++ b/day7/bank-app/src/app/bill-pay-and-recharge/bill-pay-and-recharge.component.html
@@ -1,6 +1,11 @@
-<h4>In this new BillPay, you can now make online payments to over 260 billers across various categories including:</h4>
+<h4>In this new BillPay, you can now make online 
+    payments to over 260 billers across various categories including:</h4>
 <ul>
     <li *ngFor="let item of billpayandrechargedata">{{item}}</li>
 </ul>
 
 Add billers and pay your bills through the enhanced BillPay service, powered by BillDesk.
+
+Please note your BillPay session will open in a new window while your NetBanking session here continues to remain active . Kindly ensure to also log out from your active NetBanking session here once you have exited the new enhanced BillPay module.
+
+Click on "Continue" to experience the new enhanced BillPay.
